--- a/nginx.conf
+++ b/nginx.conf
@@ -13,9 +13,8 @@ http {
     server {
         listen 80;
 
-        location / {
+        location /api/v1/ {
             proxy_pass http://fastapi_backend;
-            proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
