update config files

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deployment Pipeline
+name: CD Pipeline
 
 on:
   push:
@@ -10,10 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Build and push Docker image
-        run: |
-          docker build -t fastapi-app .
-          docker run -d -p 8000:8000 fastapi-app
+      - name: SSH and deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            cd fastapi-book-project
+            git pull origin main
+            sudo docker-compose up -d --build
