--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,5 @@
+worker_processes auto;
+
 events {
     worker_connections 1024;
 }
@@ -5,20 +7,5 @@ events {
 http {
     include /etc/nginx/mime.types;
     sendfile on;
-
-    upstream fastapi_backend {
-        server fastapi_app:8000;
-    }
-
-    server {
-        listen 80;
-
-        location /api/v1/ {
-            proxy_pass http://fastapi_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
+    include /etc/nginx/conf.d/*.conf;
 }
