--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,27 @@
+version: "3.8"
+
 services:
   fastapi:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: fastapi_app
-    ports:
-      - "8000:8000"
+    restart: always
+    networks:
+      - app_network
 
   nginx:
-    image: nginx:latest
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
     container_name: nginx_proxy
     ports:
       - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - fastapi
+    networks:
+      - app_network
+
+networks:
+  app_network:
+    driver: bridge
