--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,15 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Debug Secrets
+        run: |
+          if [ -z "${{ secrets.SSH_PRIVATE_KEY }}" ]; then
+            echo "SSH_PRIVATE_KEY is empty or not set!"
+            exit 1
+          else
+            echo "SSH_PRIVATE_KEY is set."
+          fi
+
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -18,6 +27,14 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ec2-13-51-69-79.eu-north-1.compute.amazonaws.com >> ~/.ssh/known_hosts
+
+      - name: Test SSH Connection
+        run: ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@ec2-13-51-69-79.eu-north-1.compute.amazonaws.com "echo SSH connection successful"
+
+      - name: Ensure Correct Permissions
+        run: |
+          ls -lah ~/.ssh/
+          chmod 600 ~/.ssh/id_rsa
 
       - name: Deploy with SSH
         uses: appleboy/ssh-action@master
