--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd /home/ubuntu/your_project_directory
+            cd /home/ubuntu/fastapi-book-project || exit 1
             git pull origin main
             docker-compose down
             docker-compose up -d --build
