--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,4 +46,4 @@ jobs:
             cd /home/ubuntu/fastapi-book-project || exit 1
             git pull origin main
             docker-compose down
-            docker-compose up -d --build
+            sudo docker-compose up -d --build
