--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,16 +8,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    steps:
-      - name: Debug Secrets
-        run: |
-          if [ -z "${{ secrets.SSH_PRIVATE_KEY }}" ]; then
-            echo "SSH_PRIVATE_KEY is empty or not set!"
-            exit 1
-          else
-            echo "SSH_PRIVATE_KEY is set."
-          fi
 
+    steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -31,12 +23,7 @@ jobs:
       - name: Test SSH Connection
         run: ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@ec2-13-51-69-79.eu-north-1.compute.amazonaws.com "echo SSH connection successful"
 
-      - name: Ensure Correct Permissions
-        run: |
-          ls -lah ~/.ssh/
-          chmod 600 ~/.ssh/id_rsa
-
-      - name: Deploy with SSH
+      - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
           host: ec2-13-51-69-79.eu-north-1.compute.amazonaws.com
@@ -46,4 +33,4 @@ jobs:
             cd /home/ubuntu/fastapi-book-project || exit 1
             git pull origin main
             docker-compose down
-            sudo docker-compose up -d --build
+            docker-compose up -d --build
