--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,9 @@ jobs:
       - name: Setup SSH Key
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          echo -e "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ec2-13-51-69-79.eu-north-1.compute.amazonaws.com >> ~/.ssh/known_hosts
+          ssh-keyscan ec2-13-51-69-79.eu-north-1.compute.amazonaws.com >> ~/.ssh/known_hosts
 
       - name: Test SSH Connection
         run: ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@ec2-13-51-69-79.eu-north-1.compute.amazonaws.com "echo SSH connection successful"
@@ -31,6 +31,13 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /home/ubuntu/fastapi-book-project || exit 1
+            git fetch --all
+            git reset --hard origin/main
             git pull origin main
-            docker-compose down
-            docker-compose up -d --build
+
+            # Ensure Docker is running
+            sudo systemctl restart docker
+
+            # Rebuild and restart the application
+            sudo docker-compose down
+            sudo docker-compose up --build -d --remove-orphans
